--- a/style.css
+++ b/style.css
@@ -2,103 +2,244 @@
     margin: 0;
     padding: 0;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
-    background: url(/assets/headerbg.jpeg);
-}
-h1{
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-    font-family:cursive;
-    margin-bottom: 20px;
-    animation: flutuante 2s infinite;
-}
-.main{
-    display: flex;
-    color: white;
-    gap: 20px;
-    background-color: rgba(255, 255, 255, 0.596);
-    background-image: url(https://i.pinimg.com/originals/f0/88/bd/f088bde4ead379f0a3dc4e9c7a7d5fb1.gif);
-}
-.text01{
-    display: flex;
-    font-weight: bold;
-    font-size: 18px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    justify-content:center;
-    text-align: center;
-    align-items: center;
-    
-}
-@keyframes flutuante{
-    50% {
-        transform: translateY(-10px);
+/* Estilos para telas menores que 768px de largura */
+@media (max-width: 768px) {
+    /* Estilos para telas pequenas aqui */
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        background-color: rgb(255, 219, 152);
+        width: 100%;
     }
-}
-video{
-    display: flex;
-    padding: 20px;
-    justify-content: start;
-    align-items: start;
-}
-video:hover{
-    transform: scale(1.1);
-}
-.text02{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    text-align: center;
-    font-weight: bold;
-}
-.main2{
-    color: white;
-    display: flex;
-    justify-content: center;
-    background-image: url(https://i.pinimg.com/originals/45/b4/cf/45b4cf71a706be2fae02c5cc7466572d.gif);
-    padding: 10px;
-}
-.main2 p{
-    display: flex;
-    padding-bottom: 400px;
-}
-.foto{
-    display: flex;
-    gap: 20px;
-    width: 550px;
-    height: 650px;
-}
-.card{
-    display: flex;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: sans-serif;
-    justify-content: center;
-    align-items: center;
-    width: 350px;
-    height: 400px;
-    border-radius: 20px;
-    flex-direction: column;
-    background-color: rgba(255, 196, 0, 0.664);
-}
-.cardmsc{
-    display: flex;
-    justify-content: center;
-    width: 300px;
-    height: 300px;
-}
-.msc{
-    display: flex;
-    margin-top: 10px;
-    justify-content: center;
-}
-.msc:hover{
-    transform: scale(1.1);
-}
+    h1{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-size: 28px;
+        font-family:cursive;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        animation: flutuante 2s infinite;
+    }
+    .main{
+        display: flex;
+        margin-top: 40px;
+        flex-direction: column;
+        color: white;
+        width: 100%;
+        justify-content: center;
+        
+        align-items: center;
+        background-image: url(https://i.pinimg.com/originals/f0/88/bd/f088bde4ead379f0a3dc4e9c7a7d5fb1.gif);
+    }
+    .text01{
+        display: flex;
+        font-weight: bold;
+        font-size: 18px;
+        padding: 5px;
+        width: 100%;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        justify-content:center;
+        text-align: center;
+        align-items: center;
+        
+    }
+    /* animação */
+    @keyframes flutuante{ 
+        50% {
+            transform: translateY(-10px);
+        }
+    }
+    video{
+        display: flex;
+        width: 100%;
+        height: 450px;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+    .text02{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+        width: 100%;
+        font-weight: bold;
+    }
+    .main2{
+        color: white;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 40px;
+        justify-content: center;
+        align-items: center;
+        background-image: url(https://i.pinimg.com/originals/45/b4/cf/45b4cf71a706be2fae02c5cc7466572d.gif);
+        padding: 10px;
+        margin-bottom: 40px; 
+    }
+    .main2 p{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+        text-align: center; 
+        font-size: 18px;
+    }
+    .sectionA{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: black;
+        padding: 10px;
+        width: 100%;
+    }
+    .foto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 75%;
+        height: 40%;
+    }
+    .card{
+        display: flex;
+        font-size: 16px;
+        font-weight: bold;
+        font-family: sans-serif;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 80%;
+        height: 1%;
+        border-radius: 20px;
+        flex-direction: column;
+        background-color: rgba(255, 196, 0, 0.664);
+    }
+    .cardmsc{
+        display: flex;
+        justify-content: center;
+        margin-top: 8px;
+        width: 80%;
+        height: 200px;
+    }
+    .msc{
+        display: flex;
+        margin-top: 20px;
+        justify-content: center;
+        width: 90%;
+        padding-bottom: 8px;
+    }
+    .msc:hover{
+        transform: scale(1.1);
+    }
+  }
+  
+  /* Estilos para telas maiores que 768px de largura */
+  @media (min-width: 769px) {
+    /* Estilos para telas maiores aqui */
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding: 20px;
+        background: url(/assets/headerbg.jpeg);
+    }
+    h1{
+        display: flex;
+        justify-content: center;
+        font-size: 40px;
+        font-family:cursive;
+        margin-bottom: 20px;
+        animation: flutuante 2s infinite;
+    }
+    .main{
+        display: flex;
+        color: white;
+        gap: 20px;
+        background-color: rgba(255, 255, 255, 0.596);
+        background-image: url(https://i.pinimg.com/originals/f0/88/bd/f088bde4ead379f0a3dc4e9c7a7d5fb1.gif);
+    }
+    .text01{
+        display: flex;
+        font-weight: bold;
+        font-size: 18px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        justify-content:center;
+        text-align: center;
+        align-items: center;
+        
+    }
+    @keyframes flutuante{
+        50% {
+            transform: translateY(-10px);
+        }
+    }
+    video{
+        display: flex;
+        padding: 20px;
+        justify-content: start;
+        align-items: start;
+    }
+    video:hover{
+        transform: scale(1.1);
+    }
+    .text02{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+        text-align: center;
+        font-weight: bold;
+    }
+    .main2{
+        color: white;
+        display: flex;
+        justify-content: center;
+        background-image: url(https://i.pinimg.com/originals/45/b4/cf/45b4cf71a706be2fae02c5cc7466572d.gif);
+        padding: 10px;
+    }
+    .main2 p{
+        display: flex;
+        padding-bottom: 400px;
+    }
+    .foto{
+        display: flex;
+        gap: 20px;
+        width: 550px;
+        height: 650px;
+    }
+    .card{
+        display: flex;
+        font-size: 20px;
+        font-weight: bold;
+        font-family: sans-serif;
+        justify-content: center;
+        align-items: center;
+        width: 350px;
+        height: 400px;
+        border-radius: 20px;
+        flex-direction: column;
+        background-color: rgba(255, 196, 0, 0.664);
+    }
+    .cardmsc{
+        display: flex;
+        justify-content: center;
+        width: 300px;
+        height: 300px;
+    }
+    .msc{
+        display: flex;
+        margin-top: 10px;
+        justify-content: center;
+    }
+    .msc:hover{
+        transform: scale(1.1);
+    }
+  }
+  
